<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaySheets"
    android:background="@color/DHB_Teal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
    >

        <TextView
            android:id="@+id/txt_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/txt_previous"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn_previousdate"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_previous"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_placeholderdate"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/txt_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_previousdate"
            android:layout_marginTop="75dp"
            android:text="@string/txt_current"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn_currentdate"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_current"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_placeholderdate"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/txt_future"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_currentdate"
            android:layout_marginTop="75dp"
            android:text="@string/txt_future"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn_futuredate"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_future"
            android:text="@string/txt_placeholderdate"
            android:textColor="@color/white"
            android:textSize="35sp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
    >

        <Button
            android:id="@+id/btn_information"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:text="@string/btn_information" />

    </RelativeLayout>

</RelativeLayout>