<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/Theme.LoadingScreenNoBar">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/dsc_logo"
            android:src="@drawable/dbh_logo"
        />

        <TextView
            android:id="@+id/txt_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_loading"
            android:layout_below="@id/img_logo"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
        />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/img_loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/loading_wheel"
            android:contentDescription="@string/dsc_loading"
            android:layout_below="@id/img_logo"
            android:layout_marginTop="70dp"
            android:layout_centerInParent="true"
        />

    </RelativeLayout>

</RelativeLayout>